<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_background"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:background="@drawable/shape_circle"
        android:contentDescription="@string/desc_image_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="160dp"/>

    <ImageView
        android:id="@+id/imgUserIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/desc_image_user_icon"
        app:srcCompat="@drawable/ic_add_image"
        app:layout_constraintTop_toTopOf="@id/imgUser"
        app:layout_constraintBottom_toBottomOf="@id/imgUser"
        app:layout_constraintStart_toStartOf="@id/imgUser"
        app:layout_constraintEnd_toEndOf="@id/imgUser"/>
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginHorizontal="48dp"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/imgUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_input_name"
            android:textColor="@color/deep_blue"
            android:background="@drawable/shape_rounded"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPalindromeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="48dp"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/etNameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPalindrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_input_palindrome"
            android:textColorHint="@color/gray"
            android:textColor="@color/deep_blue"
            android:background="@drawable/shape_rounded"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_rounded_button"
        android:text="@string/text_button_check"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/etPalindromeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_rounded_button"
        android:text="@string/text_button_next"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/btnCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>